pywrapper/src/pyciaaw/ciaaw_saw.h

struct ciaaw_saw_element_t{
    char element[25];
    char symbol[9];
    int z;
    double saw_min;
    double saw_max;
    double saw;
    double saw_u;
    double asaw;
    double asaw_u;
};
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Pa;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_U;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Np;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Pu;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Am;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Cm;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Bk;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Cf;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Es;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Fm;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Md;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_No;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Lr;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Rf;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Db;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Sg;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Bh;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Hs;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Mt;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ds;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Rg;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Cn;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Nh;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Fl;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Mc;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Lv;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Ts;
ADD_IMPORT extern const struct ciaaw_saw_element_t ciaaw_saw_Og;