src/capi_saw_2021.f90


type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Pa") ::&
capi_90 = capi_saw_type(&
["p","r","o","t","a","c","t","i","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","a",c_null_char," "," "," "," "," "," "], &
Pa%z, &
Pa%saw_min, &
Pa%saw_max, &
Pa%saw, &
Pa%saw_u, &
Pa%asaw, &
Pa%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_U") ::&
capi_91 = capi_saw_type(&
["u","r","a","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["U",c_null_char," "," "," "," "," "," "," "], &
U%z, &
U%saw_min, &
U%saw_max, &
U%saw, &
U%saw_u, &
U%asaw, &
U%saw_u, &
["g"," ","m",c_null_char," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Np") ::&
capi_92 = capi_saw_type(&
["n","e","p","t","u","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","p",c_null_char," "," "," "," "," "," "], &
Np%z, &
Np%saw_min, &
Np%saw_max, &
Np%saw, &
Np%saw_u, &
Np%asaw, &
Np%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Pu") ::&
capi_93 = capi_saw_type(&
["p","l","u","t","o","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["P","u",c_null_char," "," "," "," "," "," "], &
Pu%z, &
Pu%saw_min, &
Pu%saw_max, &
Pu%saw, &
Pu%saw_u, &
Pu%asaw, &
Pu%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Am") ::&
capi_94 = capi_saw_type(&
["a","m","e","r","i","c","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","m",c_null_char," "," "," "," "," "," "], &
Am%z, &
Am%saw_min, &
Am%saw_max, &
Am%saw, &
Am%saw_u, &
Am%asaw, &
Am%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Cm") ::&
capi_95 = capi_saw_type(&
["c","u","r","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","m",c_null_char," "," "," "," "," "," "], &
Cm%z, &
Cm%saw_min, &
Cm%saw_max, &
Cm%saw, &
Cm%saw_u, &
Cm%asaw, &
Cm%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Bk") ::&
capi_96 = capi_saw_type(&
["b","e","r","k","e","l","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","k",c_null_char," "," "," "," "," "," "], &
Bk%z, &
Bk%saw_min, &
Bk%saw_max, &
Bk%saw, &
Bk%saw_u, &
Bk%asaw, &
Bk%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Cf") ::&
capi_97 = capi_saw_type(&
["c","a","l","i","f","o","r","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","f",c_null_char," "," "," "," "," "," "], &
Cf%z, &
Cf%saw_min, &
Cf%saw_max, &
Cf%saw, &
Cf%saw_u, &
Cf%asaw, &
Cf%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Es") ::&
capi_98 = capi_saw_type(&
["e","i","n","s","t","e","i","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["E","s",c_null_char," "," "," "," "," "," "], &
Es%z, &
Es%saw_min, &
Es%saw_max, &
Es%saw, &
Es%saw_u, &
Es%asaw, &
Es%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Fm") ::&
capi_99 = capi_saw_type(&
["f","e","r","m","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["F","m",c_null_char," "," "," "," "," "," "], &
Fm%z, &
Fm%saw_min, &
Fm%saw_max, &
Fm%saw, &
Fm%saw_u, &
Fm%asaw, &
Fm%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Md") ::&
capi_100 = capi_saw_type(&
["m","e","n","d","e","l","e","v","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","d",c_null_char," "," "," "," "," "," "], &
Md%z, &
Md%saw_min, &
Md%saw_max, &
Md%saw, &
Md%saw_u, &
Md%asaw, &
Md%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_No") ::&
capi_101 = capi_saw_type(&
["n","o","b","e","l","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","o",c_null_char," "," "," "," "," "," "], &
No%z, &
No%saw_min, &
No%saw_max, &
No%saw, &
No%saw_u, &
No%asaw, &
No%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Lr") ::&
capi_102 = capi_saw_type(&
["l","a","w","r","e","n","c","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["L","r",c_null_char," "," "," "," "," "," "], &
Lr%z, &
Lr%saw_min, &
Lr%saw_max, &
Lr%saw, &
Lr%saw_u, &
Lr%asaw, &
Lr%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Rf") ::&
capi_103 = capi_saw_type(&
["r","u","t","h","e","r","f","o","r","d","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "], &
["R","f",c_null_char," "," "," "," "," "," "], &
Rf%z, &
Rf%saw_min, &
Rf%saw_max, &
Rf%saw, &
Rf%saw_u, &
Rf%asaw, &
Rf%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Db") ::&
capi_104 = capi_saw_type(&
["d","u","b","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["D","b",c_null_char," "," "," "," "," "," "], &
Db%z, &
Db%saw_min, &
Db%saw_max, &
Db%saw, &
Db%saw_u, &
Db%asaw, &
Db%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Sg") ::&
capi_105 = capi_saw_type(&
["s","e","a","b","o","r","g","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","g",c_null_char," "," "," "," "," "," "], &
Sg%z, &
Sg%saw_min, &
Sg%saw_max, &
Sg%saw, &
Sg%saw_u, &
Sg%asaw, &
Sg%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Bh") ::&
capi_106 = capi_saw_type(&
["b","o","h","r","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","h",c_null_char," "," "," "," "," "," "], &
Bh%z, &
Bh%saw_min, &
Bh%saw_max, &
Bh%saw, &
Bh%saw_u, &
Bh%asaw, &
Bh%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Hs") ::&
capi_107 = capi_saw_type(&
["h","a","s","s","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["H","s",c_null_char," "," "," "," "," "," "], &
Hs%z, &
Hs%saw_min, &
Hs%saw_max, &
Hs%saw, &
Hs%saw_u, &
Hs%asaw, &
Hs%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Mt") ::&
capi_108 = capi_saw_type(&
["m","e","i","t","n","e","r","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","t",c_null_char," "," "," "," "," "," "], &
Mt%z, &
Mt%saw_min, &
Mt%saw_max, &
Mt%saw, &
Mt%saw_u, &
Mt%asaw, &
Mt%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ds") ::&
capi_109 = capi_saw_type(&
["d","a","r","m","s","t","a","d","t","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "], &
["D","s",c_null_char," "," "," "," "," "," "], &
Ds%z, &
Ds%saw_min, &
Ds%saw_max, &
Ds%saw, &
Ds%saw_u, &
Ds%asaw, &
Ds%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Rg") ::&
capi_110 = capi_saw_type(&
["r","o","e","n","t","g","e","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","g",c_null_char," "," "," "," "," "," "], &
Rg%z, &
Rg%saw_min, &
Rg%saw_max, &
Rg%saw, &
Rg%saw_u, &
Rg%asaw, &
Rg%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Cn") ::&
capi_111 = capi_saw_type(&
["c","o","p","e","r","n","i","c","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","n",c_null_char," "," "," "," "," "," "], &
Cn%z, &
Cn%saw_min, &
Cn%saw_max, &
Cn%saw, &
Cn%saw_u, &
Cn%asaw, &
Cn%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Nh") ::&
capi_112 = capi_saw_type(&
["n","i","h","o","n","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","h",c_null_char," "," "," "," "," "," "], &
Nh%z, &
Nh%saw_min, &
Nh%saw_max, &
Nh%saw, &
Nh%saw_u, &
Nh%asaw, &
Nh%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Fl") ::&
capi_113 = capi_saw_type(&
["f","l","e","r","o","v","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["F","l",c_null_char," "," "," "," "," "," "], &
Fl%z, &
Fl%saw_min, &
Fl%saw_max, &
Fl%saw, &
Fl%saw_u, &
Fl%asaw, &
Fl%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Mc") ::&
capi_114 = capi_saw_type(&
["m","o","s","c","o","v","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","c",c_null_char," "," "," "," "," "," "], &
Mc%z, &
Mc%saw_min, &
Mc%saw_max, &
Mc%saw, &
Mc%saw_u, &
Mc%asaw, &
Mc%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Lv") ::&
capi_115 = capi_saw_type(&
["l","i","v","e","r","m","o","r","i","u","m",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["L","v",c_null_char," "," "," "," "," "," "], &
Lv%z, &
Lv%saw_min, &
Lv%saw_max, &
Lv%saw, &
Lv%saw_u, &
Lv%asaw, &
Lv%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Ts") ::&
capi_116 = capi_saw_type(&
["t","e","n","n","e","s","i","n","e",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","s",c_null_char," "," "," "," "," "," "], &
Ts%z, &
Ts%saw_min, &
Ts%saw_max, &
Ts%saw, &
Ts%saw_u, &
Ts%asaw, &
Ts%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

type(capi_saw_type), protected, public, bind(C, name="ciaaw_saw_Og") ::&
capi_117 = capi_saw_type(&
["o","r","g","a","n","e","s","s","o","n",c_null_char," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["O","g",c_null_char," "," "," "," "," "," "], &
Og%z, &
Og%saw_min, &
Og%saw_max, &
Og%saw, &
Og%saw_u, &
Og%asaw, &
Og%saw_u, &
[c_null_char," "," "," "," "," "," "," "," "])

end module ciaaw__capi_saw_2021